<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:rowCount="8"
    android:columnCount="2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10sp"
    android:layout_marginLeft="10sp"
    tools:context="com.example.cse3310.cateringapp.RequestEventActivity"
    tools:layout_editor_absoluteY="81dp">


<TextView
android:id="@+id/textView6"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="40sp"
android:layout_marginTop="10sp"
android:text="@string/occasion"
android:layout_row="1"
android:layout_column="0"
android:textSize="18sp"
    />

<TextView
android:id="@+id/textView7"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="40sp"
android:text="@string/partySize"
android:layout_row="2"
android:layout_column="0"
android:textSize="18sp"
    />

<TextView
android:id="@+id/textView8"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="40sp"
android:text="@string/mealType"
android:layout_row="3"
android:layout_column="0"
android:textSize="18sp"
    />

<TextView
android:id="@+id/textView9"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="40sp"
android:text="@string/drinkType"
android:layout_row="4"
android:layout_column="0"
android:textSize="18sp"
 />


<TextView
android:id="@+id/textView10"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="40sp"
android:text="@string/formality"
android:layout_row="5"
android:layout_column="0"
android:textSize="18sp"
    />

<TextView
android:id="@+id/textView11"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="30sp"
android:text="@string/venue"
android:layout_row="6"
android:layout_column="0"
android:textSize="18sp"
    />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="left|bottom"
        android:layout_row="7"
        android:text="@string/confirm_event"
        tools:text="CONFIRM" />

    <Button
        android:id="@+id/rejectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="right|bottom"
        android:layout_marginRight="10sp"
        android:layout_row="7"
        android:text="@string/reject_event"
        tools:text="REJECT" />
<TextView
android:id="@+id/party_size"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="40sp"
android:layout_marginLeft="5sp"
android:entries="@array/partySize"
android:layout_row="2"
android:layout_column="1"
    />

<TextView
android:id="@+id/occasion"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="40sp"
android:layout_marginTop="10sp"
android:ems="10"
android:inputType="text|textPersonName"
android:textSize="18sp"
android:layout_row="1"
android:layout_column="1"
tools:ignore="LabelFor" />

<TextView
android:id="@+id/formality"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="40sp"
android:layout_marginLeft="5sp"
android:entries="@array/formality"
android:layout_row="5"
android:layout_column="1"
    />

<TextView
android:id="@+id/meal_type"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="40sp"
android:layout_marginLeft="5sp"
android:entries="@array/mealType"
android:layout_row="3"
android:layout_column="1"
    />

<TextView
android:id="@+id/drink_type"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="40sp"
android:layout_marginLeft="5sp"
android:entries="@array/drinkType"
android:layout_row="4"
android:layout_column="1"
    />

<TextView
android:id="@+id/venue"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginBottom="30sp"
android:entries="@array/venue"
android:layout_row="6"
android:layout_column="1"

    />

<TextView
android:id="@+id/time_result"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="40sp"
android:layout_marginBottom="10sp"
android:textSize="16sp"
android:text="Time"
android:layout_row="0"
android:layout_column="0"
 />

<TextView
android:id="@+id/date_result"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:textSize="16sp"
android:text="Date"
android:layout_marginTop="10sp"
android:layout_marginBottom="20sp"
android:layout_row="0"
android:layout_column="0"
 />
    </GridLayout>