<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:rowCount="8"
    android:columnCount="2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginLeft="10sp"
    tools:context="com.example.cse3310.cateringapp.RequestEventActivity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:text="@string/occasion"
        android:layout_row="1"
        android:layout_column="0"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:text="@string/partySize"
        android:layout_row="2"
        android:layout_column="0"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:text="@string/mealType"
        android:layout_row="3"
        android:layout_column="0"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:text="@string/drinkType"

        android:layout_row="4"
        android:layout_column="0"
        android:textSize="18sp"

        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/drink_type"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:text="@string/formality"
        android:layout_row="5"
        android:layout_column="0"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:text="@string/venue"
        android:layout_row="6"
        android:layout_column="0"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/request_event"
        android:layout_columnSpan="2"
        android:layout_row="7"
        android:layout_column="0"
        />

    <Spinner
        android:id="@+id/party_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:entries="@array/partySize"
        android:layout_row="2"
        android:layout_column="1"
        />

    <EditText
        android:id="@+id/occasion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:ems="10"
        android:inputType="text|textPersonName"
        android:textSize="18sp"
        android:layout_row="1"
        android:layout_column="1"
        tools:ignore="LabelFor" />

    <Spinner
        android:id="@+id/formality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:entries="@array/formality"
        android:layout_row="5"
        android:layout_column="1"
        />

    <Spinner
        android:id="@+id/meal_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:entries="@array/mealType"
        android:layout_row="3"
        android:layout_column="1"
        />

    <Spinner
        android:id="@+id/drink_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:entries="@array/drinkType"
        android:layout_row="4"
        android:layout_column="1"
        />

    <Spinner
        android:id="@+id/venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:entries="@array/venue"
        android:layout_row="6"
        android:layout_column="1"
        />

    <Button
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="50sp"
        android:text="@string/time2"
        android:layout_row="0"
        android:layout_column="0"
        />

    <TextView
        android:id="@+id/time_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="10sp"
        android:text="Time"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="top" />

<TextView
        android:id="@+id/date_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        android:layout_marginTop="0sp"
        android:layout_marginLeft="10sp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center|left" />
</GridLayout>
