<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:rowCount="8"
    android:columnCount="2"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10sp"
    tools:context="com.example.cse3310.cateringapp.ViewReservedEventDetails"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="40sp"
        android:text="@string/occasion"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/partySize"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/mealType"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/drinkType"
        android:textSize="18sp"

        />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/formality"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/venue"
        android:textSize="18sp" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="10sp"
        android:layout_row="7"
        android:text="@string/Cancel" />

    <TextView
        android:id="@+id/party_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_marginLeft="5sp"
        android:layout_column="1"
        android:layout_row="2"
        android:entries="@array/partySize" />

    <TextView
        android:id="@+id/occasion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="5sp"
        android:layout_column="1"
        android:layout_row="1"
        android:ems="10"
        android:inputType="text|textPersonName"
        android:textSize="18sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/formality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_marginLeft="5sp"
        android:layout_column="1"
        android:layout_row="5"
        android:entries="@array/formality" />

    <TextView
        android:id="@+id/meal_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_marginLeft="5sp"
        android:layout_column="1"
        android:layout_row="3"
        android:entries="@array/mealType" />

    <TextView
        android:id="@+id/drink_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_marginLeft="5sp"
        android:layout_column="1"
        android:layout_row="4"
        android:entries="@array/drinkType" />

    <TextView
        android:id="@+id/venue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_marginLeft="5sp"
        android:layout_column="1"
        android:layout_row="6"
        android:entries="@array/venue" />

    <TextView
        android:id="@+id/time_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="10sp"
        android:layout_row="0"
        android:text="Time"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:id="@+id/date_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="20sp"
        android:layout_column="0"
        android:layout_row="0"
        android:text="Date"

        tools:layout_editor_absoluteX="10dp" />
    />
</GridLayout>
